--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -218,7 +218,6 @@
 	background: #00bcd4;
 }
 
-
 .mail-title {
 	width: 90%;
 	text-align: center;
@@ -236,3 +235,6 @@
 	padding: 20px 0;
 	text-align: center;
 }
+
+
+/* thanks */
